fixed shift up when active tab

--- a/src/modules/shared/components/header/Header.module.scss
+++ b/src/modules/shared/components/header/Header.module.scss
@@ -129,8 +129,31 @@
 }
 
 .active {
-  box-sizing: border-box;
   color: $color__primary;
-  transition: all 0.5s ease-in-out;
-  border-bottom: 3px solid $color__primary;
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    left: 0;
+    bottom: 0;
+    display: block;
+    background: $color__primary;
+    transform: scaleY(0);
+    transform-origin: center;
+    animation: slideUp 0.3s forwards;
+  }
+}
+
+
+@keyframes slideUp {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+    height: 2.5px;
+  }
 }
